[package]
name = "spartan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13.0"
pasta_curves = "0.5.1"
sha2 = "0.10.8"
spartan2 = { git = "https://github.com/Microsoft/Spartan2" }
bellpepper = "0.2.0"
bellpepper-core = "0.2.1"
